--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pr2-udev (0.5.2-focal) stable; urgency=medium
+
+  * Update to focal
+
+ -- Shingo Kitagawa <shingogo@hotmail.co.jp> Wed, 18 May 2022 16:25:04 +0900
+
 pr2-udev (0.5.2-xenial) trusty; urgency=medium
 
   [ TheDash ]
